2007-09-11  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/psp.c: don't use "major" and "minor" as variable
	names, they may conflict with system symbols.

2007-09-11  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c: formatting.

2007-09-11  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.c (gimp_image_add_layers): make the first of
	the added layers the active layer. Fixes bug #469752.

2007-09-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/spread.c (spread_dialog): update the preview on
	"value-changed", instead of "refval-changed". Fixes bug #469360.

2007-09-11  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/context.pdb: add PDB function to determine
	the available paint methods.

	* app/pdb/internal_procs.c
	* app/pdb/context_cmds.c
	* libgimp/gimpcontext_pdb.[ch]: regenerated.

	Fixes bug #473513

2007-09-11  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-open-dialog.c: don't reverse the order of URIs
	when opening multiple files as layers. Fixes one aspect of bug
	#469752.

2007-09-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: allow to specify rendering intent and 
	black point compensation. Fixes bug #474787.

2007-09-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/burn-in-anim.scm
	* plug-ins/script-fu/scripts/coffee.scm: removed newlines from
	translatable strings. Fixes bug #475553.

2007-09-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lens.c: applied patch from Aurimas Juška which
	simplifies the code by using GimpPixelFetcher and fixes handling
	of selections in the preview. Fixes the last aspect of bug #356716.

2007-09-10  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.[ch]
	* app/core/gimpchannel.c
	* app/core/gimpdrawable-transform.[ch]
	* app/core/gimpdrawable.c
	* app/core/gimpimage-item-list.[ch]
	* app/core/gimpitem-linked.[ch]
	* app/core/gimpitem.[ch]
	* app/core/gimplayer.c
	* app/paint/gimpperspectiveclone.c