@@ -1,3 +1,8 @@
+2007-09-12  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/lcms.c: fixed use of black-point-compensation
+	parameter (bug #475952).
+
 2007-09-11  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/common/psp.c: don't use "major" and "minor" as variable
